# TimeUtils

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake-multi-platform.yml  macos-build.yml  windows-build-msvc.yml  windows-build-msys2.yml
include/TimeUtils/: Duration.hpp  Timer.hpp
include/TimeUtils/platform/: PosixMachTiming.hpp
src/: Duration.cpp  Timer.cpp
